[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "raytracer_bin"
path = "src/main.rs"

[lib]
name = "raytracer_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
glam = { version = "0.20.5", features = ["serde"]}
rayon = "1.5"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
indicatif = {version = "0.16.2", features = ["rayon"]}
web-sys = { version = "0.3", features = ["console"]}

